<resources>
    <string name="app_name">TercoChistusVeritaqueVia</string>
    <string name="logoDescricao">Chistus Veritaque Via</string>
    <string name="latim">Latim</string>
    <string name="portugues">Português</string>
    <string name="lblOpcoesTitulo">Terço Virtual</string>
    <string name="lblOferecimento">Oferecimento do Terço</string>
    <string name="lblDescricaoOF">Divino Jesus, nós Vos oferecemos este terço que vamos rezar, meditando nos mistérios da Vossa Redenção. Concedei-nos, por intercessão da Virgem Maria, Mãe de Deus e nossa Mãe, as virtudes que nos são necessárias para bem rezá-lo e a graça de ganharmos as indulgências desta santa devoção.</string>
    <string name="bntIniciarOF">Iniciar</string>
    <string name="lblAgradecimentoTitulo">Agradecimento do Terço</string>
    <string name="AgradecimentoAnunciado">Infinitas graças vos damos, Soberana Rainha, pelos benefícios que todos os dias recebemos de vossas mãos liberais. Dignai-vos agora e para sempre tomar-nos debaixo de vosso poderoso amparo e para mais vos suplicar vos saudamos com uma Salve Rainha....</string>
    <string name="lblOremos">Oremos</string>
    <string name="lblIrCarpeDiem">Carpe Diem</string>
    <string name="lblTituloSolid">Solidariedade</string>
    <string name="lblTituloMsgUser">Mensagem aos Usuários</string>
    <string name="lblMsgUser">Infelizmente estamos passando por momentos difíceis em relação Covid-19. Vamos juntos orar por todos familiares que estão sofrento e que precisam de paz, força, saúde e fé.Por intercessão da Nossa Senhora da Aparecida.Intercessão todos santos e santas que possam nos guiar sempre nesta luta.</string>
    <string name="bntSantaRita">Santa Rita de Cássia</string>
    <string name="bntMsgSantoTerco">Santo Terço</string>
    <string name="lblTituloSantaRita">Santa Rita de Cássia</string>
    <string name="lblTituloSantaRitaOracao">Oração</string>
    <string name="lblOracaoSantaRita">Ó poderosa e gloriosa Santa Rita chamada Santa das causas impossíveis, advogada dos casos desesperados, auxiliadora da última hora, refúgio e abrigo da dor que arrasta para o abismo do pecado e da desesperança, com toda a confiança em Vosso poder junto ao Coração Sagrado de Jesus, a Vós recorro no caso difícil e imprevisto, que dolorosamente oprime o meu coração.</string>
    <string name="lblPedidoSantaRita">(Faça o seu pedido)</string>
    <string name="lblOracao2SantaRita">Obtenha a graça que desejo, pois sendo-me necessária, eu a quero. Apresentada por Vós a minha oração, o meu pedido, por Vós que sois tão amada por Deus, certamente será atendido. Dizei a Nosso Senhor que me valerei da graça para melhorar a minha vida e os meus costumes e para cantar na Terra e no Céu a Divina Misericórdia.</string>
    <string name="lblOracao3SantaRita">Santa Rita das causas impossíveis, intercedei por nós! Amém.</string>
    <string name="lblTituloCarpeDiem">Carpe Diem</string>
    <string name="lblSubTituloCarpeDiemMsg">Muito Obrigado</string>
    <string name="lblMsgCarpeDiem1">Por utilizar o santo terço: Chistus Veritaque Via</string>
    <string name="lblMsgCarpeDiem2">Fique a vontade selecione as opções</string>
    <string name="bntCarpeDiemSair">Sair</string>
    <string name="bntCarpeDiemSobre">Sobre</string>
    <string name="bntCarpeDiemVoltarInicio">Voltar ao Início</string>
    <string name="lblTituloSobre">Sobre</string>
    <string name="lblSobreMsg">Mensagem do Desenvolvedor</string>
    <string name="lblSobreTexto"> Olá usuários, me chamo Athauan,<br/> sou estudante em análise e desenvolvimento de sistemas e apaixonado por tecnologia. O grande o motivo na qual me fez desenvolver esse aplicativo foi por causa do meu pai que ficou internado por contrair o Covid-19, graças as orações e ao nosso bom Deus hoje ele está bem. <br/><br/> Em breve esta pandemia vai passar e a nossa fé ficará mais forte. <br/><br/>O objetivo desse aplicativo é por fins educativos e profissional, por este motivo a monetização não será aplicado. Mas de alguma maneira quiser entrar em contato, compartilhar nas redes sociais ou fazer alguma contribuição fique a vontade: </string>
    <string name="lblSobreContato">Contato:</string>
    <string name="lblSobreCompartilhe">Compartilhe e avalie:</string>
     <string name="lblSobreContribuicao">Contribuição</string>
    <string name="lblSobreAgradecer">Muito Obrigado<br>Por utilizar o santo terço: Chistus Veritaque Via</br></string>
    <string name="lblSobreForteAbraco">Forte Abraço</string>
    <string name="lblSobreVersao"><b>Versão</b> André: v10.21 | UI: AP-12.21</string>
    <string name="lblDicaTercoPosicao">Toque no terço</string>
    <string name="lblDicaImagem">Toque na Imagem para mudar a posição</string>
    <string name="lblIdiomaPortugues">Português</string>
    <string name="lblIdiomaLatim">Latim</string>
    <string name="lblPosicao">Próximo</string>
    <string name="lblVoltar">Voltar</string>
    <string name="lblCreioTitulo">Creio</string>
    <string name="lblCreio">Creio em Deus Pai todo-poderoso, criador do céu e da terra; e em Jesus Cristo, seu único Filho, nosso Senhor; que foi concebido pelo poder do Espírito Santo; nasceu da Virgem Maria, padeceu sob Pôncio Pilatos, foi crucificado, morto e sepultado. Desceu à mansão dos mortos; ressuscitou ao terceiro dia; subiu aos céus, está sentado à direita de Deus Pai todo-poderoso, donde há de vir a julgar os vivos e os mortos; creio no Espírito Santo, na Santa Igreja Católica, na comunhão dos Santos, na remissão dos pecados, na ressurreição da carne, na vida eterna.Amém.</string>
    <string name="lblPaiNossoTitulo">Pai Nosso</string>
    <string name="lblPaiNosso">Pai-Nosso que estais nos céus, santificado seja vosso nome, venha a nós o vosso reino, seja feita a vossa vontade assim na terra como no céu. O pão nosso de cada dia nos dai hoje, perdoai-nos as nossas ofensas assim como nós perdoamos a quem nos tem ofendido, e não nos deixeis cair em tentação, mas livrai-nos do mal.Amém.</string>
    <string name="lblAveMariaTitulo">Ave Maria</string>
    <string name="lblAveMaria">Ave Maria, cheia de graça, o Senhor é convosco, bendita sois vós entre as mulheres, e bendito é o fruto do vosso ventre, Jesus. Santa Maria, Mãe de Deus, rogai por nós, pecadores, agora e na hora da nossa morte. Amém.</string>
    <string name="bntAveMaria10">10 Ave Maria</string>
    <string name="bntAveMaria3">3 Ave Maria</string>
    <string name="lblGloriaTitulo">Glória</string>
    <string name="lblGloria">Glória ao Pai, ao Filho e ao Espírito Santo. Como era no princípio, agora e sempre. Amém</string>
    <string name="lblJaculatoriaTitulo">Jaculatória</string>
    <string name="lblJaculatoria">Óh! meu Jesus, perdoai-nos, livrai-nos do fogo do inferno. Levai as almas todas para o céu e socorrei principalmente as que mais precisarem.</string>
    <string name="lblSalveRainhaTitulo">Salve Rainha</string>
    <string name="lblSalveRainhaOracao">Salve, Rainha, Mãe de misericórdia, vida, doçura e esperança nossa, salve! A vós bradamos os degredados filhos de Eva. A vós suspiramos, gemendo e chorando neste vale de lágrimas. Eia, pois, advogada nossa, esses vossos olhos misericordiosos a nós volvei, e depois deste desterro mostrai-nos Jesus, bendito fruto do vosso ventre, ó clemente, ó piedosa, ó doce e sempre Virgem Maria. Rogai por nós, Santa Mãe de Deus. Para que sejamos dignos das promessas de Cristo.Amém.</string>
    <string name="bntSalveRainha">Voltar ao Terço</string>
    <string name="lblCreioTituloLT">Credo</string>
    <string name="lblCreioLT">Credimus in unum Deum Patrem omnipotentem. Factorem caeli et terrae, Visibilium omniumet invisibilum Conditorem. Et in unum Dominum Iesum Christum, Filium Dei unigenitum. Et ex Patre natum ante omnia seacula. Deum ex Deo. Lumem de lumine. Deum verum ex Deo vero. Natum non factum. Omousion Patri: Hoc est, eiusdem cum Patre substantie. Per quem omnia facta sunt, quae in caelo et quae in terra. Qui propter nos homines et propter nostram salutem descendit de caelis. Et incarnatus est Spiritu Sancto Natus ex Maria Virgine. Et homo factus est. Passus sub Pontio Pilatus. Sepultus, tertia dia resurrexit. Ascendit ad caelos, sedet at dexteram Dei Patris omnipotentis. Inde venturus est iudicare vivos et mortuos. Cuius regni non erit finis. Et in Sipritum Santcum Dominum vivificatorem et ex Patre et Filio procedentem. Cum Patre et Filio adorandum et conglorificandum. Qui locutus est per prophetas. Et unam Sanctam Catholicam et apostolicam Ecclesiam. Expectamus resurrectionem mortuorum et vitam venturi seaculi. Amen.</string>
    <string name="lblPaiNossoTituloLT">Pater Noster</string>
    <string name="lblPaiNossoLT">Pater Noster, qui es in coelis.Sanctificetur nomen tuuum.Adveniat regnum tuum.Fiat voluntas tua, sicut in coelo et in terra.Panem nostrum quotidianum da nobis hodie.Dimitte nobis debita nostra, sicut et nos dimittimus debitoribus nostris.Et ne nos inducas in tentationem, sed libera nos a malo. Amen.</string>
    <string name="lblAveMariaTituloLT">Ave Maria</string>
    <string name="lblAveMariaLT">Ave Maria, gratia plena, Dominus tecum.Benedicta tu in mulieribus, et benedictus fructus ventris tui, Jesus.Sancta Maria, Mater Dei, ora pro nobis peccatoribus, nunc et in hora mortis nostrae. Amem</string>
    <string name="lblGloriaTituloLT">Glória</string>
    <string name="bntMisterio">Agradecimento</string>
    <string name="titulo1Mt">1º Mistério</string>
    <string name="titulo5Mt">5º Mistério</string>
    <string name="subTituloMt5Seg">A perda e o reencontro de JESUS em Jerusalém</string>
    <string name="descricaoMt5Seg">Contemplamos a perda e o reencontro de Jesus no templo de Jerusalém. Maria e José perderam Jesus ainda menino aos 12 anos em Jerusalém e após três dias de dor e sofrimento o encontram no templo no meio de doutores da lei ensinando a doutrina do Pai. A Escritura Sagrada, é o caminho para encontrarmos Jesus, quando nos perdemos ou desviamos desse caminho, a conseqüência é a dor o sofrimento. Na procura diária pela leitura, estudo e reflexão da Bíblia, podemos buscar o encontro ou o reencontro com Nosso Senhor e depois viver essas palavras e ensinamentos o quanto mais cedo. E, assim como Jesus, crescer na obediência e cuidar das coisas do Pai.</string>
    <string name="subTituloMt5Ter">JESUS morre na cruz</string>
    <string name="descricaoMt5Ter">Contemplamos a crucificação e morte de Nosso Senhor Jesus Cristo. Cruz, escândalo para os judeus, loucura para os gentios, consolo e sinal de fé para os cristãos. A cruz Sagrada seja a nossa luz... todo sofrimento na terra não tem comparação ao da cruz do Senhor. Por amor ao ser humano e ao pecador suportou dores incalculáveis, humilhou-se, foi insultado e desprezado, tratado como o pior dos criminosos. O maior dos tesouro de um cristão ..honrar a Santa Cruz!</string>
    <string name="subTituloMt1Dom">A ressurreição de JESUS</string>
    <string name="descricaoMt1Dom">Contemplamos a ressurreição de Jesus. A morte não é o fim para aqueles que crêem em Jesus. A vitória sobre a morte, a esperança na vida eterna, o envio a anunciar a boa-nova, a remissão dos pecados. A paz de Jesus àqueles que O seguem.</string>
    <string name="subTituloMt5Dom">A Coroaçao de MARIA por JESUS e os Anjos</string>
    <string name="descricaoMt5Dom">Contemplamos a coroação de Nossa Senhora como Rainha de todos os anjos e santos. Rainha dos Anjos: Uma mulher vestida de Sol, sobre a cabeça uma coroa de estrelas e sobre o os pés a lua. Rainha da Terra, Rainha da Igreja intercessora poderosa junto a Jesus, tem poder de esmagar a cabeça do dragão infernal, na hora de nossa morte nos defenderá junto a Jesus, e a todos aqueles que por amor a ela e a seu filho forem fiéis na oração do Santo Rosário. ...a cada Ave-Maria depositamos uma rosa a seus pés...</string>
    <string name="bntIrAgradecimentoPT">Agradecimento</string>
</resources>