<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo5Mt"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMt1SubTitulo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bntCreioSeg"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:background="@color/bntColorIdiomaLT"
        android:onClick="goPaiNossoExibir"
        android:text="@string/lblPaiNossoTitulo"
        app:layout_constraintBottom_toTopOf="@+id/bntOremosSeg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMt1DescricaoTV2" />

    <TextView
        android:id="@+id/txtMt1DescricaoTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|fill"
        android:padding="5dp"
        android:text="@string/descricaoMt5Seg"
        app:layout_constraintBottom_toTopOf="@+id/bntCreioSeg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMt1" />

    <TextView
        android:id="@+id/txtMt1SubTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|fill"
        android:padding="5dp"
        android:text="@string/subTituloMt5Seg"
        app:layout_constraintBottom_toTopOf="@+id/imgMt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/bntGloriaSeg"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:background="@color/bntColorIdiomaLT"
        android:onClick="goGloriaExibir"
        android:text="@string/lblGloriaTitulo"
        app:layout_constraintBottom_toTopOf="@+id/bntPaiNossoSeg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntOremosSeg" />

    <Button
        android:id="@+id/bntPaiNossoSeg"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:background="@color/bntColorIdiomaLT"
        android:onClick="goJaculatoriaExibir"
        android:text="@string/lblJaculatoriaTitulo"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntGloriaSeg" />

    <Button
        android:id="@+id/button2"
        android:layout_width="302dp"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        android:onClick="goAgradecimento"
        android:text="@string/bntIrAgradecimentoPT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntPaiNossoSeg" />

    <ImageView
        android:id="@+id/imgMt1"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/txtMt1DescricaoTV2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMt1SubTitulo2"
        app:srcCompat="@drawable/segmt5" />

    <Button
        android:id="@+id/bntOremosSeg"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:background="@color/bntColorIdiomaLT"
        android:onClick="goAveMariaExibir"
        android:text="@string/bntAveMaria10"
        app:layout_constraintBottom_toTopOf="@+id/bntGloriaSeg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntCreioSeg" />
</androidx.constraintlayout.widget.ConstraintLayout>