<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:exported="true"
    android:background="@drawable/bgpadrao">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alex_brush"
        android:text="@string/titulo5Mt"
        android:textAppearance="@style/stTitulo"
        android:textColor="@color/textoTitulo"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/bntCreio"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bntpadrao"
        android:onClick="goPaiNossoExibir"
        android:text="@string/lblPaiNossoTitulo"
        app:layout_constraintBottom_toTopOf="@+id/bntOremos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMtDescricao" />

    <TextView
        android:id="@+id/txtMtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/merriweather_light"
        android:gravity="center|fill"
        android:padding="5dp"
        android:text="@string/descricaoMt5Ter"
        android:textAppearance="@style/stTextoGeral"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/bntCreio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMtSubTitulo" />

    <TextView
        android:id="@+id/txtMtSubTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_light"
        android:gravity="center|fill"
        android:padding="5dp"
        android:text="@string/subTituloMt5Ter"
        android:textAllCaps="true"
        android:textAppearance="@style/stSubTitloMisterio"
        app:layout_constraintBottom_toTopOf="@+id/txtMtDescricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMt" />

    <Button
        android:id="@+id/bntGloria"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bntpadrao"
        android:onClick="goGloriaExibir"
        android:text="@string/lblGloriaTitulo"
        app:layout_constraintBottom_toTopOf="@+id/bntPaiNosso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntOremos" />

    <Button
        android:id="@+id/bntPaiNosso"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bntpadrao"
        android:onClick="goJaculatoriaExibir"
        android:text="@string/lblJaculatoriaTitulo"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntGloria" />

    <Button
        android:id="@+id/button2"
        android:layout_width="302dp"
        android:layout_height="44dp"
        android:background="@drawable/agradecer"
        android:onClick="goAgradecimento"
        android:text="@string/bntIrAgradecimentoPT"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntPaiNosso" />

    <ImageView
        android:id="@+id/imgMt"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/txtMtSubTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/termt5" />

    <Button
        android:id="@+id/bntOremos"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bntpadrao"
        android:onClick="goAveMariaExibir"
        android:text="@string/bntAveMaria10"
        app:layout_constraintBottom_toTopOf="@+id/bntGloria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntCreio" />
</androidx.constraintlayout.widget.ConstraintLayout>