<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TercoActivity">

    <TextView
        android:id="@+id/txtTituloOracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lblCreioTitulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/txtSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtOracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lblCreio"
        app:layout_constraintBottom_toTopOf="@+id/bntMisterio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAjuda" />

    <ImageView
        android:id="@+id/imgTerco"
        android:layout_width="236dp"
        android:layout_height="347dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAjuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSub"
        app:srcCompat="@drawable/p0" />

    <TextView
        android:id="@+id/txtAjuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lblDicaTercoPosicao"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/txtOracao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTerco" />

    <Button
        android:id="@+id/bntMisterio"
        android:layout_width="177dp"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/bntMisterio"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOracao" />

    <TextView
        android:id="@+id/txtSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lblIncioSubTitulo"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/imgTerco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloOracao" />

</androidx.constraintlayout.widget.ConstraintLayout>